--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -126,7 +126,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -142,7 +142,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -158,7 +158,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -174,7 +174,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -190,7 +190,7 @@
                <i class="fas fa-star-half-alt"></i>
             </div>
             <h3>cheese hamburger</h3>
-            <div class="price">$29.99</div>
+            <div class="price">₹29.99</div>
             <a href="#" class="btn">add to cart</a>
          </div>
       </div>
@@ -412,8 +412,6 @@
       <a href="#contact" class="btn">contact</a>
       <a href="#blogs" class="btn">blogs</a>
    </div>
-
-   <p class="credit"> created by <span>mr. web designer</span> | all rights reserved! </p>
 
 </section>
 
